--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4288,18 +4288,18 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand > img {
   display: block;
 }
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: -15px;
   }
-}
+} */
 .navbar-toggle {
   position: relative;
   float: right;
-  padding: 9px 10px;
+  padding: 10px 10px;
   margin-top: 8px;
-  margin-right: 15px;
+  margin-right: 8px;
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
