--- a/style.css
+++ b/style.css
@@ -16,11 +16,13 @@
 #FOOTER SECTION
 #RESPONSIVE DESIGN
 */
+@import "variables.css";
+
 
 body {
   background-color: #dadada;
   font-family: "Prata", serif;
-  color: #32363a;
+  color: var(--gp-gray);
   font-size: 16px;
   overflow-x: hidden;
   line-height: 24px;
@@ -152,8 +154,8 @@ img {
 /* HEADER SECTION */
 
 #gp-header {
-  background-color: #32363a;
-  border-bottom: 4px solid #ffaa45;
+  background-color: var(--gp-gray);
+  border-bottom: 4px solid var(--gp-main);
   position: fixed;
   left: 0;
   top: 0;
@@ -182,7 +184,7 @@ img {
 
 .gp-main-navbar .gp-main-nav li a {
   color: #fff;
-  background-color: #29c666;
+  background-color: var(--gp-scnd);
   border-radius: 16px;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -227,7 +229,7 @@ img {
 .navbar-default .navbar-nav > .active > a, 
 .navbar-default .navbar-nav > .active > a:hover, 
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #29c666;
+  color: var(--gp-scnd);
   background-color: white;
 }
 
@@ -236,7 +238,7 @@ img {
 
 .scrollToTop {
   bottom: 48px;
-  color: #29c666;
+  color: var(--gp-scnd);
   display: none;
   font-size: 32px;
   line-height: 50px;
@@ -253,13 +255,14 @@ img {
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
   border-radius: 50%;
-  background-color: #32363a;
+  background-color: var(--gp-gray);
 }
 
 .scrollToTop:hover,
 .scrollToTop:focus {
-  background-color: #32363a;
-  color: #29c666;
+  background-color: var(--gp-gray);
+  color: var(--gp-scnd);
+  opacity: 0.75;
 }
 
 /*==================
@@ -1577,7 +1580,7 @@ RESERVATION SECTION
   }
 
   .gp-main-navbar .gp-main-nav {
-    background-color: #32363a;
+    background-color: var(--gp-gray);
     text-align: center;
   }
 
