--- a/variables.css
+++ b/variables.css
@@ -1,5 +1,7 @@
 :root {
   --gp-main: #ffaa45;
-  --gp-scnd: #29c666;
+  --gp-scnd: #15c75d;
+  --gp-thrd: #53c7ec;
   --gp-gray: #32363a;
+  --gp-white: #dadada;
 }
