--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4368,6 +4368,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-right: 5px;
     margin-left: 5px;
   }
+  .navbar-nav > li:last-child {
+    margin-right: 0px;
+  }
   .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -4495,7 +4498,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-right {
     float: right !important;
-    margin-right: -15px;
+    margin-right: 0;
   }
   .navbar-right ~ .navbar-right {
     margin-right: 0;
