--- a/variables.css
+++ b/variables.css
@@ -1,6 +1,6 @@
 :root {
   --gp-main: #ffaa45;
-  --gp-scnd: #15c75d;
+  --gp-scnd: #36c76c;
   --gp-thrd: #53c7ec;
   --gp-gray: #32363a;
   --gp-white: #dadada;
