--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1104,8 +1104,8 @@ a {
 }
 a:hover,
 a:focus {
-  color: #23527c;
-  text-decoration: underline;
+  color: inherit;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
