--- a/style.css
+++ b/style.css
@@ -235,6 +235,59 @@ img {
   background-color: white;
 }
 
+.gp-dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.gp-dropdown .gp-dropbtn {
+  color: white;
+  margin: 0;
+  background-color: var(--gp-scnd);
+  border-radius: 16px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.gp-dropdown-content {
+  opacity: 0;
+  position: absolute;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.gp-dropdown-content a {
+  float: none;
+  margin-top: 4px;
+  padding: 10px 15px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.gp-dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.gp-dropdown:hover .gp-dropdown-content {
+  opacity: 1;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.gp-dropdown:not(:hover) .gp-dropdown-content {
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
 
 /*scrol to top*/
 
@@ -1843,4 +1896,23 @@ RESERVATION SECTION
   }
 
   
+}
+
+@media (max-width: 767.99px) {
+
+  .navbar-item-md {
+    display: block !important;
+  }
+  .navbar-item-lg {
+    display: none !important;
+  }
+}
+@media (min-width: 768px) {
+
+  .navbar-item-lg {
+    display: block !important;
+  }
+  .navbar-item-md {
+    display: none !important;
+  }
 }
