--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 body {
   background-color: var(--gp-white);
-  font-family: "Open Sans", serif;
+  font-family: "Cabin", "Open Sans";
   color: var(--gp-gray);
   font-size: 16px;
   overflow-x: hidden;
@@ -175,7 +175,7 @@ img {
 }
 
 .gp-main-navbar .gp-main-nav {
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
   font-size: 20px;
 }
 
@@ -256,7 +256,7 @@ img {
 .gp-dropdown-content {
   opacity: 0;
   position: absolute;
-  min-width: 160px;
+  min-width: 123px;
   z-index: 1;
 }
 
