--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 @import "variables.css";
 
 body {
-  background-color: var(--gp-white);
+  background-color: var(--gp-white-da);
   font-family: "Cabin", "Open Sans";
   color: var(--gp-gray);
   font-size: 16px;
@@ -1430,6 +1430,107 @@ img {
   height: 100%;
 }
 
+/* MENU */
+
+.gp-menu-row>.col {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.gp-menu-title {
+  text-align: center;
+  display: inline;
+  float: right;
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.gp-menu-wrapper {
+  display: inline;
+  float: left;
+  width: 100%;
+  padding: 64px 0;
+}
+
+.gp-menu-wrapper .gp-menu-row:nth-child(odd) {
+  background-image: var(--gp-white-gr);
+}
+
+.gp-menu-row {
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(90deg, transparent, var(--gp-main), transparent, var(--gp-main), transparent) 0% 0% 100% 0%;
+}
+
+.gp-menu-row:last-child {
+  border-bottom: 0px;
+}
+
+.gp-price {
+  color: var(--gp-gray);
+}
+
+.gp-menu-price {
+  margin: 12px 0px;
+  font-weight: bold;
+  float: right;
+}
+
+.gp-menu-info {
+  font-style: italic;
+  opacity: 0.5;
+  margin-bottom: 0px;
+}
+
+.gp-menu-name {
+  margin-bottom: 0px;
+}
+
+.gp-menu-title>h1,
+.gp-menu-title>h2,
+.gp-menu-title>h3 {
+  font-family: "Leckerli One";
+  font-weight: bold;
+  text-align: center;
+}
+
+.hr-line {
+  width: 16%;
+  border-width: 0px 0px 12px 0px;
+  border-bottom-color: var(--gp-scnd);
+  border-style: dotted;
+}
+
+.hr-text {
+  line-height: 2em;
+  height: 3em;
+  position: relative;
+  border: 0;
+  color: var(--gp-scnd);
+}
+
+.hr-text:before {
+  content: '';
+  background: linear-gradient(90deg, transparent, #36c76c, transparent);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 2px;
+}
+
+.hr-text:after {
+  font-size: 40px;
+  font-family: "Leckerli One";
+  content: attr(data-content);
+  position: relative;
+  display: inline-block;
+  padding: 0 .5em;
+  line-height: 1em;
+  color: var(--gp-scnd);
+  background-color: var(--gp-white-da);
+}
+
 /* FOOTER SECTION */
 
 #gp-footer {
@@ -1604,6 +1705,14 @@ img {
 
   #gp-header {
     padding: 0 15px;
+  }
+
+  .gp-menu-wrapper {
+    padding: 32px 0;
+  }
+
+  .gp-menu-title {
+    margin-bottom: 16px;
   }
 
   .navbar-default .navbar-toggle {
